# levolver64

./: .gitignore  How to compile under VS2010.txt  ev_ogl.sln
ev_ogl/: Makefile  TBUtilities.h  alice.c  bk.c  boundary.c  calcforc.c  check.c  dump.c  (+142 more)
ev_ogl/lpng1218x64/lpng1218/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Visual Studio 2005 Command Prompt.lnk  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libpng.sln  m2.bat  makeLibs.bat  png.vcxproj  png.vcxproj.filters
ev_ogl/lpng1218x64/lpng1218/lib/: deflate.lib  example.lib  gzio.c  png.lib  pngread.lib  pngrutil.lib  pngtrans.lib  pngwtran.lib
ev_ogl/lpng1218x64/lpng1218/png.dir/Release/png.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  png.lastbuildstate
ev_ogl/lpng1218x64/lpng1218/projects/visualc71/: UpgradeLog.XML  libpng.sln  libpng.vcxproj  libpng.vcxproj.filters  pngtest.vcxproj  pngtest.vcxproj.filters  zlib.vcxproj  zlib.vcxproj.filters
ev_ogl/lpng1218x64/lpng1218/projects/visualc71/Debug/: ResolveAssemblyReference.cache
ev_ogl/lpng1218x64/lpng1218/projects/visualc71/Win32_LIB_Release/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  libpng.lastbuildstate  libpng.lib  libpng.pch
ev_ogl/lpng1218x64/lpng1218/projects/visualc71/Win32_LIB_Release/ZLib/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  zlib.lib
ev_ogl/lpng1218x64/lpng1218/projects/visualc71/x64/DLL Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  rc.command.1.tlog  rc.write.1.tlog  zlib.lastbuildstate
ev_ogl/lpng1218x64/lpng1218/projects/visualc71/x64/LIB Release/: CL.write.1.tlog  cl.command.1.tlog  pngw32.res  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  zlib.lastbuildstate
ev_ogl/lpng1218x64/lpng1218/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
ev_ogl/lpng1218x64/lpng1218/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
metis/metis-4.0/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  METIS.sln  Makefile  Makefile.in  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  m.bat  metis.vcxproj  metis.vcxproj.filters
metis/metis-4.0/Release/: metis.lib
metis/metis-4.0/lib/: compiler output-warnings.txt  files.txt  libcommands.txt  metis.lib  metis_w.lib
metis/metis-4.0/metis.dir/Release/metis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
metis/metis-4.0/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
metis/metis-4.0/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+399 files in other folders)
